# internal/http/handlers/api/contracts.go
@@ -28,6 +28,8 @@ var (
 	GetCsrfTokenErrors                              = contract.MustOperationErrors("getCsrfToken")
 	GetGoogleLoginOptionsErrors                     = contract.MustOperationErrors("getGoogleLoginOptions")
 	LoginWithGoogleErrors                           = contract.MustOperationErrors("loginWithGoogle")
+	GetAppleLoginOptionsErrors                      = contract.MustOperationErrors("getAppleLoginOptions")
+	LoginWithAppleErrors                            = contract.MustOperationErrors("loginWithApple")
 	LoginWithPasswordErrors                         = contract.MustOperationErrors("loginWithPassword")
 	SignupDirectErrors                              = contract.MustOperationErrors("signupDirect")
 	StartSignupChallengeErrors                      = contract.MustOperationErrors("startSignupChallenge")
@@ -42,6 +44,7 @@ var (
 	CheckRecentAuthenticationErrors                 = contract.MustOperationErrors("checkRecentAuthentication")
 	ReauthenticateWithPasswordErrors                = contract.MustOperationErrors("reauthenticateWithPassword")
 	ReauthenticateWithGoogleErrors                  = contract.MustOperationErrors("reauthenticateWithGoogle")
+	ReauthenticateWithAppleErrors                   = contract.MustOperationErrors("reauthenticateWithApple")
 	BeginPasskeyReauthenticationErrors              = contract.MustOperationErrors("beginPasskeyReauthentication")
 	FinishPasskeyReauthenticationErrors             = contract.MustOperationErrors("finishPasskeyReauthentication")
 	LogoutErrors                                    = contract.MustOperationErrors("logout")
@@ -55,6 +58,7 @@ var (
 	AddCurrentUserPasswordErrors                    = contract.MustOperationErrors("addCurrentUserPassword")
 	ChangeCurrentUserPasswordErrors                 = contract.MustOperationErrors("changeCurrentUserPassword")
 	LinkCurrentUserGoogleErrors                     = contract.MustOperationErrors("linkCurrentUserGoogle")
+	LinkCurrentUserAppleErrors                      = contract.MustOperationErrors("linkCurrentUserApple")
 	UnlinkCurrentUserAuthMethodErrors               = contract.MustOperationErrors("unlinkCurrentUserAuthMethod")
 	DeleteCurrentUserPasskeyErrors                  = contract.MustOperationErrors("deleteCurrentUserPasskey")
 	RevokeCurrentUserSessionErrors                  = contract.MustOperationErrors("revokeCurrentUserSession")
@@ -71,4 +75,5 @@ var (
 	StartGoogleAccountRecoveryLinkErrors            = contract.MustOperationErrors("startGoogleAccountRecoveryLink")
 	CompleteAccountRecoveryLinkWithPasswordErrors   = contract.MustOperationErrors("completeAccountRecoveryLinkWithPassword")
 	CompleteAccountRecoveryLinkWithGoogleErrors     = contract.MustOperationErrors("completeAccountRecoveryLinkWithGoogle")
+	CompleteAccountRecoveryLinkWithAppleErrors      = contract.MustOperationErrors("completeAccountRecoveryLinkWithApple")
 )
